--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -13,3 +13,7 @@ hotelMyCampValidPassword=Manager1!
 
 hotelMyCampWrongUserName=manager1
 hotelMyCampWrongPassword=manager2!
+
+brcUrl=https://www.bluerentalcars.com/
+brcValidEmail=customer@bluerentalcars.com
+brcValidPassword=12345
