--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -17,3 +17,5 @@ hotelMyCampWrongPassword=manager2!
 brcUrl=https://www.bluerentalcars.com/
 brcValidEmail=customer@bluerentalcars.com
 brcValidPassword=12345
+
+hepsiburadaUrl=https://www.hepsiburada.com
