--- a/configuration.properties
+++ b/configuration.properties
@@ -4,6 +4,10 @@ browser=chrome
 amazonUrl=https://www.amazon.com
 facebookUrl=https://www.facebook.com
 hotelMyCampUrl=https://www.hotelmycamp.com
+spendingUrl=https://spendinggood.com/
+
+spendingEmail=saltuktoklucu@hotmail.com
+spendingPassword=Batch81_Team03
 
 facebookWrongEmail=sadaasd12345@sdasd.com
 facebookWrongPassword=sadaasd12345
