--- a/configuration.properties
+++ b/configuration.properties
@@ -5,9 +5,16 @@ amazonUrl=https://www.amazon.com
 facebookUrl=https://www.facebook.com
 hotelMyCampUrl=https://www.hotelmycamp.com
 spendingUrl=https://spendinggood.com/
+spendingGoodUrl=https://spendinggood.com/
 
 spendingEmail=saltuktoklucu@hotmail.com
 spendingPassword=Batch81_Team03
+
+tubaEmail=tubaktas@gmail.com
+tubaPassword=963123Tulker.
+
+haticeEmail=sbahar647@gmail.com
+haticePassword=hk123456
 
 facebookWrongEmail=sadaasd12345@sdasd.com
 facebookWrongPassword=sadaasd12345
